--- a/Taller-Git/Taller-Git/Taller-Git.csproj
+++ b/Taller-Git/Taller-Git/Taller-Git.csproj
@@ -69,6 +69,9 @@
 	  <MauiXaml Update="Maestro.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\PullPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
