Se agrego pagina Push

--- a/Taller-Git/Taller-Git/Taller-Git.csproj
+++ b/Taller-Git/Taller-Git/Taller-Git.csproj
@@ -72,6 +72,9 @@
 	  <MauiXaml Update="Pages\PullPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\PushPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
